[package]
name = "timelapse-render"
version = "0.1.0"
edition = "2021"

[dependencies]
# serde = serialization framework, like JSON.parse/stringify but for any type
# The "derive" feature lets us use #[derive(Deserialize)] on our structs
serde = { version = "1", features = ["derive"] }

# serde_json = reads JSON from stdin into our Rust structs
serde_json = "1"